2001-11-15  Ross Golder  <ross@golder.org>

	* devhelp.spec.in: Changed ${_sysconfdir} to %{_sysconfdir}

2001-10-25  Johan Dahlin  <zilch.am@home.se>

	* src/devhelp-controller.c (devhelp_controller_init): Use
	~/.devhelp as constructor and add DATA_DIR/devhelp later.

	* src/bookshelf.h: Added XMLBook, since it's used in books-dialog.c.
	Removed bookshelf_read_xml, added bookshelf_get_hidden_books,
	show/hide_book

	* src/bookshelf.c (bookshelf_new): Read ~/.devhelp/books.xml here.
	(bookshelf_get_hidden_books): New function
	(bookshelf_hide_book): New function
	(bookshelf_show_book): New function
	(bookshelf_read_xml): Updated.
	(bookshelf_write_xml): Updated.
	(bookshelf_add_directory): Updated, much cleaner now.

	* src/books-dialog.c: Changed to match bookshelf updates.

	* src/book-index.c (book_index_open_node): Style fix.

2001-10-22  Mikael Hallendal  <micke@codefactory.se>

	* src/book.c (book_new): copy spec-file uri.
	(book_get_spec_file): added/impl, returns the uri to the
	spec-file.

2001-10-20  Mikael Hallendal  <micke@codefactory.se>

	* src/bookshelf.c (version_strcmp): style fix
	(bookshelf_read_books_dir): style fix.

2001-10-20  Johan Dahlin  <zilch.am@home.se>

	* src/main.c (main): Set wm icon by calling 
	gnome_window_icon_set_default_from_file.

	* debian/control (Depends): Remove dependency of libgnome-vfs-dev

2001-10-20  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Add zh_TW to ALL_LINGUAS once again, after discussing
	  with translator. Right pane has no proper i18n support, but just
	  disabling one translation entry is ok.

2001-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-window.c (dw_zoom_level_changed_cb): style fix

2001-10-19  Johan Dahlin  <zilch.am@home.se>

	* Makefile.am (install-data-local): Remove gconftool --shutdown.

	* devhelp.spec.in: Make it non b0rked.

	* src/devhelp-window.c (dw_zoom_level_changed_cb): Set menus
	correctly.

2001-10-19  Christophe Merlet  <redfox@eikonex.org>
